# test_1

./: CMakeLists.txt  README.md  kr-2.c  tasks.md
oleg.harchevkin/: CMakeLists.txt  main.c
task1/: kr-1.c  task1.c
task2/: task2.c
task3/: task3.c
task_1/: task_1  task_1.c
task_2/: task_2  task_2.c
task_3/: task_3  task_3.c
